--- a/src/components/Sayhello/Sayhello.module.css
+++ b/src/components/Sayhello/Sayhello.module.css
@@ -227,4 +227,18 @@
     margin-left: 3em;
     padding-top: 0.5em;
   }
+
+  .email {
+    font-size: 0.9em;
+    font-weight: 250;
+    margin-left: 3em;
+    margin-right: 3em;
+    text-align: center;
+  }
+
+  .backtotopflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
