--- a/src/components/Sayhello/Sayhello.module.scss
+++ b/src/components/Sayhello/Sayhello.module.scss
@@ -224,6 +224,18 @@
     margin-left: 3em;
     padding-top: 0.5em;
   }
+  .email {
+    font-size: 0.9em;
+    font-weight: 250;
+    margin-left: 3em;
+    margin-right: 3em;
+    text-align: center;
+  }
+  .backtotopflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
