--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -98,7 +98,7 @@
   display: none;
 }
 
-@media screen and (max-width: 425px) {
+@media only screen and (min-width: 319px) and (max-width: 374px) {
   .menuWidget {
     display: block;
     margin-right: 0.5em;
@@ -107,6 +107,14 @@
   .bridget {
     margin-left: 1em;
     margin-top: 1.5em;
+    font-size: 1em;
+  }
+
+  .bridget a {
+    color: #9fcba0;
+    font-size: 1.2em;
+    text-decoration: none;
+    margin-left: 0em;
   }
 
   .navflex {
@@ -142,43 +150,17 @@
     display: block;
     text-align: center;
     margin: 0;
-  }
-}
-@media only screen and (min-width: 320px) and (max-width: 374px) {
-  .bridget {
-    margin-left: 0em;
-    margin-top: 1.5em;
-    font-size: 0.62em;
-  }
-
-  .menuWidget {
-    display: block;
-    margin-right: 0em;
-    font-size: 2.2em;
   }
 }
 @media only screen and (min-width: 375px) and (max-width: 425px) {
-  .bridget {
-    margin-left: 0em;
-    margin-top: 1.5em;
-    font-size: 0.8em;
-  }
-
   .menuWidget {
     display: block;
-    margin-right: 0.5em;
-    font-size: 2.2em;
-  }
-}
-@media only screen and (min-width: 426px) and (max-width: 480px) {
-  .menuWidget {
-    display: block;
-    margin-right: 0.5em;
+    margin-right: 0.1em;
   }
 
   .bridget {
-    margin-left: 1em;
-    margin-top: 1.5em;
+    margin-left: 0.1em;
+    margin-top: 0.8em;
   }
 
   .navflex {
@@ -200,6 +182,7 @@
     background-color: white;
     border-top: 1px solid #7b9eba;
     display: none;
+    padding-top: 20px;
   }
 
   .navItemsFlexExpanded {
@@ -215,8 +198,21 @@
     text-align: center;
     margin: 0;
   }
+
+  .navsection {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 6.5em;
+    box-shadow: 0 2px 6px -5px #000000;
+    background-color: white;
+    z-index: 100;
+    align-items: center;
+    width: 100%;
+  }
 }
-@media only screen and (min-width: 375px) and (max-width: 480px) {
+@media only screen and (min-width: 426px) and (max-width: 480px) {
   .menuWidget {
     display: block;
     margin-right: 0.1em;
@@ -277,66 +273,6 @@
   }
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
-  .menuWidget {
-    display: block;
-    margin-right: 0.1em;
-  }
-
-  .bridget {
-    margin-left: 0.1em;
-    margin-top: 0.8em;
-  }
-
-  .navflex {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    position: relative;
-    width: 100%;
-    margin-left: 0em;
-  }
-
-  .navItemsFlex ul {
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    min-width: 100%;
-    height: calc(100vh - 60px);
-    background-color: white;
-    border-top: 1px solid #7b9eba;
-    display: none;
-    padding-top: 20px;
-  }
-
-  .navItemsFlexExpanded {
-    flex-direction: column;
-    position: absolute;
-    top: 128px;
-    left: 0;
-    min-width: 100%;
-    height: 100vh;
-    background-color: white;
-    border-top: 1px solid #7b9eba;
-    display: block;
-    text-align: center;
-    margin: 0;
-  }
-
-  .navsection {
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 6.5em;
-    box-shadow: 0 2px 6px -5px #000000;
-    background-color: white;
-    z-index: 100;
-    align-items: center;
-    width: 100%;
-  }
-}
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
   .menuWidget {
     display: block;
     margin-right: 0.5em;
