--- a/src/components/Sayhello/Sayhello.module.css
+++ b/src/components/Sayhello/Sayhello.module.css
@@ -172,6 +172,10 @@
   }
 }
 @media only screen and (min-width: 319px) and (max-width: 374px) {
+  .buttoncontactme {
+    padding-top: 1em;
+  }
+
   .sayhellotitle {
     color: #f6d7ba;
     font-size: 2.8em;
