--- a/src/components/Sayhello/Sayhello.module.scss
+++ b/src/components/Sayhello/Sayhello.module.scss
@@ -166,7 +166,9 @@
 }
 
 @media only screen and (min-width: 319px) and (max-width: 374px) {
-
+  .buttoncontactme {
+    padding-top: 1em;
+  }
   .sayhellotitle {
     color: #f6d7ba;
     font-size: 2.8em;
@@ -211,7 +213,6 @@
 }
 
 @media only screen and (min-width: 375px) and (max-width: 425px) {
-
   .sayhellotitle {
     color: #f6d7ba;
     font-size: 2.8em;
